Fixed some text and footer spacing

--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,3 +1,11 @@
+h3, p{
+    margin: 0;
+}
+
+p{
+    font-size: small;
+}
+
 .footer {
     height: 22vh;
     display: flex;
@@ -7,5 +15,4 @@
     align-items: center;
     padding: 2rem;
     text-align: left;
-
 }
